# FTracker

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  suggestions.md  technical_design.md
API_CALL/: transactions.http
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: bd929a1ab011_initial_migration.py
backend/database/: __init__.py  categories.json  category_types.json
backend/database/sample_data/: categaory_table_dump.sql
backend/models/: __init__.py  categories.py  category.py  currency.py  goal.py  transaction.py
backend/routes/: data.py  goals.py  transactions.py
backend/tests/: conftest.py  test_data.py  test_goals.py  test_transactions.py
database/: __init__.py
database/sample_data/: categaory_table_dump.sql
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/ftracker/: package.json
frontend/ftracker/src/: App.js
frontend/ftracker/src/assets/theme/: index.js
frontend/ftracker/src/pages/: HomePage.js  TransactionsPage.js
models/: transaction.py
routes/: data.py  goals.py  transactions.py
